# ros_simple_follower

./: .gitignore
simple_follower/: CMakeLists.txt  package.xml
simple_follower/launch/: laser_follower.launch.py
simple_follower/launch/nodes/: follower.launch.py
simple_follower/scripts/: follower.py  laserTracker.py  visualTracker.py
